--- a/themes/manifeste2017/static/src/sass/modules/_hero.scss
+++ b/themes/manifeste2017/static/src/sass/modules/_hero.scss
@@ -71,7 +71,7 @@ $module: ".hero";
 
         position: absolute;
         top: 40%;
-        left: 0;
+        left: 10%;
         width: 50%;
         text-align: center;
 
