--- a/themes/manifeste2017/templates/home/inc/body.html
+++ b/themes/manifeste2017/templates/home/inc/body.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-14 col-md-push-1 col-lg-12 col-lg-push-2 tac">
-            <div class="section-title section-title--uppercase section-title--accent">
+            <div class="section-title section-title--uppercase section-title--underline section-title--main">
                 à la une
             </div>
             <div class="row-12">
