Add Breaking News to home

--- a/themes/manifeste2017/templates/base.html
+++ b/themes/manifeste2017/templates/base.html
@@ -50,6 +50,9 @@
         </div>
     {% endblock %}
 
+    {% block breaking_news %}
+    {% endblock %}
+
     {% block header %}
         <div class="header push" data-sticky data-sticky-detach-at="0">
             <div class="container">
