--- a/themes/manifeste2017/static/src/sass/modules/_page.scss
+++ b/themes/manifeste2017/static/src/sass/modules/_page.scss
@@ -28,6 +28,10 @@ $module: ".page";
         min-height: 0;
     }
 
+    .event-line-box {
+        @include margin-bottom(2);
+    }
+
     &__date {
 
         @include margin-top(-2.75);
@@ -36,6 +40,15 @@ $module: ".page";
         text-transform: uppercase;
         font-family: $serif;
         font-weight: weight(bold);
+
+    }
+
+    &__meta {
+
+        border-top: 1px solid $color-black;
+        border-bottom: 1px solid $color-black;
+
+        @include padding(1 0);
 
     }
 
@@ -97,12 +110,23 @@ $module: ".page";
 
     }
 
-    &__meta-date {
+    &__meta-section {
 
-        @include font-size(m);
+        @include font-size(s);
         @include line-height(1);
         @include typeface(serif);
-        font-weight: weight(heavy);
+        font-weight: weight(light);
+        text-transform: uppercase;
+
+    }
+
+    &__meta-date {
+
+        @include font-size(s);
+        @include line-height(1);
+        @include typeface(serif);
+        text-transform: uppercase;
+        font-weight: weight(bold);
 
         span {
             font-size: 13px;
@@ -117,14 +141,21 @@ $module: ".page";
 
         @include font-size(s);
         @include line-height(1);
-        @include typeface(sans-serif);
+        @include typeface(serif);
         text-transform: uppercase;
-        font-weight: weight(regular);
+        font-weight: weight(bold);
 
         &--small {
             @include font-size(s);
+            display: block;
+            text-transform: uppercase;
         }
 
+    }
+
+    a.page__meta-title {
+        font-weight: weight(regular);
+        text-decoration: underline;
     }
 
     &__meta-text {
