Update titles in search results

--- a/themes/manifeste2017/static/src/sass/modules/boxes/_search-box.scss
+++ b/themes/manifeste2017/static/src/sass/modules/boxes/_search-box.scss
@@ -37,8 +37,7 @@ $module: ".search-box";
     &__title {
         @include margin(0 0 0 0);
         font-weight: weight(bold);
-        text-transform: uppercase;
-        color: $color-black;
+        color: $color-main;
         @include transition(color 0.25s ease-in-out);
 
         i {
