--- a/themes/manifeste2017/static/src/sass/modules/_pagination.scss
+++ b/themes/manifeste2017/static/src/sass/modules/_pagination.scss
@@ -37,7 +37,32 @@ $module: ".pagination";
         vertical-align: middle;
         cursor: pointer;
 
-        @include margin(0 0.1);
+        @include margin(0);
+        background: white;
+        border-top: 1px solid $color-main;
+        border-bottom: 1px solid $color-main;
+        border-left: 1px solid $color-main;
+
+        &:first-child {
+            border-top-left-radius: 5px;
+            border-bottom-left-radius: 5px;
+            border-right: 1px solid $color-main;
+
+            a {
+                border-top-left-radius: 5px;
+                border-bottom-left-radius: 5px;
+            }
+        }
+
+        &:last-child {
+            border-top-right-radius: 5px;
+            border-bottom-right-radius: 5px;
+
+            a {
+                border-top-right-radius: 5px;
+                border-bottom-right-radius: 5px;
+            }
+        }
 
     }
 
@@ -45,21 +70,18 @@ $module: ".pagination";
 
         @include font-size(xs);
         @include line-height(1);
-        @include typeface(sans-serif);
+        @include typeface(serif);
         @include margin(0);
-        font-weight: weight(regular);
+        font-weight: weight(bold);
 
         display: block;
-        background: #001B42;
-        color: white;
-
-        border: 1px solid black;
+        color: $color-main;
 
         @include padding(.15 .5);
         @include transition(all .25s ease-in-out);
 
         &.active, &:hover {
-            background: #002C6B;
+            background: $color-main;
             color: white;
         }
 
