Add the no price comment to event meta

--- a/themes/manifeste2017/templates/agenda/includes/event_metainfo.html
+++ b/themes/manifeste2017/templates/agenda/includes/event_metainfo.html
@@ -34,6 +34,7 @@
 
         {% if event.prices.all %}
             {% if event.prices.all.0|floatformat != '0' %}
+            
                 <div class="col-md-4">
 
                     <div class="page__meta-section">{% trans "Price(s)" %}</div>
@@ -47,6 +48,15 @@
                         </div>
                     {% endfor %}
                 </div>
+
+            {% else %}
+
+                <div class="page__meta-section">{% trans "Price(s)" %}</div>
+
+                <div class="page__meta-title">
+                    {{ event.no_price_comments }}
+                </div>
+
             {% endif %}
         {% endif %}
 
