Override informations page with custom blocks system

--- a/themes/manifeste2017/static/src/sass/layout/_global.scss
+++ b/themes/manifeste2017/static/src/sass/layout/_global.scss
@@ -27,6 +27,12 @@
         @include margin(0 0 0 0);
 
     }
+
+    @include mq($until: sm) {
+
+        margin-top: 70px;
+
+    }
 }
 
 #container {
