--- a/themes/manifeste2017/templates/includes/social.html
+++ b/themes/manifeste2017/templates/includes/social.html
@@ -4,7 +4,7 @@
 	<div class="row">
 		<div class="col-sm-16 tac">
 			<div class="section-title section-title--uppercase section-title--underline section-title--main">
-				{% trans "Twitter feed" %}
+				{% trans "Twitter feed" %} #manifeste17
 			</div>
 			<div>
 				{% include "twitter/tweets.html" %}
@@ -12,15 +12,17 @@
 		</div>
 	</div>
 </div>
-<div class="section container">
-	<div class="row">
-		<div class="col-sm-16 tac">
-			<div class="section-title section-title--uppercase section-title--underline section-title--accent">
-				{% trans "Instagram feed" %} <a class="fcw" href="https://www.instagram.com/explore/tags/ircam/" target="_blank">#ircam</a>
+<div class="section">
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-16 tac">
+				<div class="section-title section-title--uppercase section-title--underline section-title--accent">
+					{% trans "Instagram feed" %} <a class="fcw" href="https://www.instagram.com/explore/tags/ircam/" target="_blank">#manifeste17</a>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
-<div>
-	{% include "includes/instagram.html" %}
+	<div>
+		{% include "includes/instagram.html" %}
+	</div>
 </div>
