--- a/themes/manifeste2017/templates/includes/calendar.html
+++ b/themes/manifeste2017/templates/includes/calendar.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-16">
+        <div class="col-md-14 col-md-push-1">
             <form action="{% url 'event_list' %}" method="GET" id="jsEventsHomeForm">
                 {{ event_calendar_form }}
             </form>
