--- a/themes/manifeste2017/templates/network/organization_list.html
+++ b/themes/manifeste2017/templates/network/organization_list.html
@@ -1,6 +1,8 @@
 {% extends "pages/page.html" %}
 {% load i18n mezzanine_tags keyword_tags pages_tags organization_tags %}
 
+{% block body_class %}organization{% endblock %}
+
 {% block meta_title %}{% trans "Network" %}{% endblock %}
 
 {% block meta_description %}
@@ -20,7 +22,7 @@
 
 {% block page_slider %}
 
-    <div style="position: relative;">
+    <div class="section" style="position: relative;">
         <div class="map" id="network-map">
         </div>
     </div>
@@ -44,17 +46,29 @@
                                     {{ organization.name }}
                                 </div>
                                 <div class="slider-network__slide-subtitle" data-marker-subtitle>
-                                    {{ organization.city }}, {{ organization.country.name }}
+                                    {{ organization.address }}
                                 </div>
 
                                 <div class="">
                                     {{ organization.type }}, {{ organization.type.css_class }}
                                 </div>
                                 <div class="slider-network__slide-description" data-marker-description>
+
+                                    {% if organization.url %}
+                                        <p>
+                                            <a href="organization.url" target="_blank">
+                                                {{ organization.url }}
+                                            </a>
+                                        </p>
+                                    {% endif %}
+
                                     {{ organization.description }}
-                                    <a href="{% url 'event_list' %}?event_locations_filter[]={{ event_location.title|urlencode }}" class="button button--xsmall button--black">
-                                        {% trans "LINKED EVENTS" %}
-                                    </a>
+
+                                    <p>
+                                        <a href="{% url 'event_list' %}?event_locations_filter[]={{ event_location.title|urlencode }}" class="button button--xsmall button--black">
+                                            {% trans "LINKED EVENTS" %}
+                                        </a>
+                                    </p>
                                 </div>
 
                             </li>
