--- a/themes/manifeste2017/templates/home/inc/slider.html
+++ b/themes/manifeste2017/templates/home/inc/slider.html
@@ -1,6 +1,6 @@
 {% load i18n pages_tags mezzanine_tags media_tags organization_tags %}
 {% if home.dynamiccontenthomeslider_set.all|length > 0 %}
-    <div class="container">
+    <div class="section container">
         <div class="row">
             <div class="col-sm-16">
                 <div class="slider-home">
@@ -9,6 +9,11 @@
                                 {% with slider.content_object.images.all|get_type:'slider' as images %}
                                     {% if images %}
                                         {% if slider.content_type.model == 'event' %}
+                                            <li class="slider-home__slide">
+                                                {% with event=slider.content_object %}
+                                                    {% include 'agenda/includes/event_linecard.html' %}
+                                                {% endwith %}
+                                            </li>
                                             <li class="slider-home__slide">
                                                 {% with event=slider.content_object %}
                                                     {% include 'agenda/includes/event_linecard.html' %}
@@ -26,7 +31,7 @@
 {% endif %}
 
 {% load i18n pages_tags mezzanine_tags media_tags organization_tags %}
-<div class="container hide-from-sm mt2">
+<div class="section container hide-from-sm">
     <div class="row">
         <div class="col-sm-12 col-sm-push-2 tac">
             <div class="row-12">
