--- a/themes/manifeste2017/static/src/sass/modules/boxes/_article-box.scss
+++ b/themes/manifeste2017/static/src/sass/modules/boxes/_article-box.scss
@@ -278,6 +278,7 @@ $module: ".article-box";
         @include line-height(.75);
         @include typeface(serif);
         @include margin(0);
+        @include margin-top(0.5);
         font-weight: weight(light);
         color: white;
         @include transition(color 0.5s ease-in-out);
