Change nav footer links style

--- a/themes/manifeste2017/static/src/sass/modules/navs/_nav-footer.scss
+++ b/themes/manifeste2017/static/src/sass/modules/navs/_nav-footer.scss
@@ -48,6 +48,15 @@ $module: ".nav-footer";
         @include typeface(serif);
         font-weight: weight(bold);
         color: $color-black;
+
+        &--small {
+            font-weight: weight(regular)
+        }
+
+        &:hover {
+            text-decoration: underline;
+        }
+
     }
 
 }
